# linkcrate

./: .gitignore  README.md  config.toml  database-main.db  pyproject.toml
alembic/: env.py
alembic/versions/: 170f199ce7c0_initial_migration.py  9aa51cc59ae5_updated_migration.py
app/: config.py  database.py  dependency.py  main.py
app/models/: bookmark.py
app/routers/: bookmark.py
app/schema/: bookmark.py
app/utils/: crud.py  link_meta.py
